--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
-<li>Rita Ramos, and Bruno Martins, <i>Using Neural Encoder-Decoder Models with Continuous Outputs for Remote Sensing Image Captioning</i>, IEEE Access, 2022 [<a href="">PDF</a>]</li>
+<li>Rita Ramos, and Bruno Martins, <i>Using Neural Encoder-Decoder Models with Continuous Outputs for Remote Sensing Image Captioning</i>, IEEE Access, 2022 [<a href="https://doi.org/10.1109/ACCESS.2022.3151874">PDF</a>]</li>
 <li>Ana Cardodo, Bruno Martins, and Jacinto Estima, <i>A novel deep learning approach using contextual embeddings for toponym resolution</i>, ISPRS International Journal of Geo-Information, 2022 [<a href="https://www.mdpi.com/2220-9964/11/1/28">PDF</a>]</li>
 <li>Jacques Fize, Ludovic Moncla, and Bruno Martins, <i>Deep Learning for Toponym Resolution: Geocoding Based on Pairs of Toponyms</i>, ISPRS International Journal of Geo-Information, 2021 [<a href="https://www.mdpi.com/2220-9964/10/12/818">PDF</a>]</li>
 <li>João Monteiro, Bruno Martins, Miguel Costa, and João M. Pires, <i>Geospatial Data Disaggregation Through Self-Trained Encoder-Decoder Convolutional Models</i>, ISPRS International Journal of Geo-Information, 2021 [<a href="https://www.mdpi.com/2220-9964/10/9/619">PDF</a>]</li>
@@ -352,10 +352,10 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
-<li>Gil Rocha, Luís Trigo, Henrique Lopes Cardoso, Rui Sousa-Silva, Paula Carvalho, Bruno Martins, and Miguel Won, <i>Annotating Arguments in a Corpus of Opinion Articles</i>, Proceedings of the International Conference on Language Resources and Evaluation, 2022 [<a href="">PDF</a>] </li>
-<li>Gil Rocha, Bernardo Leite, Luís Trigo, Henrique Lopes Cardoso, Rui Sousa Silva, Paula Carvalho, Bruno Martins, and Miguel Won, <i>Predicting Argument Density from Multiple Annotations</i>, Proceedings of the International Conference on Natural Language & Information Systems, 2022 [<a href="">PDF</a>] </li>
-<li>Marina Georgati, João Monteiro, Bruno Martins, and Carsten Keßler, <i>Spatial Disaggregation of Population Subgroups Leveraging Self-Trained Multi-Output Gradient Boosted Regression Trees</i>, Proceedings of the AGILE International Conference on Geographic Information Science, 2022 [<a href="">PDF</a>] </li>
-<li>Krzysztof Janowicz, Rui Zhu, Grant McKenzie, Judith Verstegen, Bruno Martins, and Ling Cai, <i>Six GIScience Ideas That Must Die</i>, Proceedings of the AGILE International Conference on Geographic Information Science, 2022 [<a href="">PDF</a>] </li>				
+<li>Gil Rocha, Luís Trigo, Henrique Lopes Cardoso, Rui Sousa-Silva, Paula Carvalho, Bruno Martins, and Miguel Won, <i>Annotating Arguments in a Corpus of Opinion Articles</i>, Proceedings of the International Conference on Language Resources and Evaluation, 2022 [<a href="http://www.lrec-conf.org/proceedings/lrec2022/pdf/2022.lrec-1.201.pdf">PDF</a>] </li>
+<li>Gil Rocha, Bernardo Leite, Luís Trigo, Henrique Lopes Cardoso, Rui Sousa Silva, Paula Carvalho, Bruno Martins, and Miguel Won, <i>Predicting Argument Density from Multiple Annotations</i>, Proceedings of the International Conference on Natural Language & Information Systems, 2022 [<a href="https://doi.org/10.1007/978-3-031-08473-7_21">PDF</a>] </li>
+<li>Marina Georgati, João Monteiro, Bruno Martins, and Carsten Keßler, <i>Spatial Disaggregation of Population Subgroups Leveraging Self-Trained Multi-Output Gradient Boosted Regression Trees</i>, Proceedings of the AGILE International Conference on Geographic Information Science, 2022 [<a href="https://agile-giss.copernicus.org/articles/3/5/2022/agile-giss-3-5-2022.pdf">PDF</a>] </li>
+<li>Krzysztof Janowicz, Rui Zhu, Grant McKenzie, Judith Verstegen, Bruno Martins, and Ling Cai, <i>Six GIScience Ideas That Must Die</i>, Proceedings of the AGILE International Conference on Geographic Information Science, 2022 [<a href="https://agile-giss.copernicus.org/articles/3/7/2022/agile-giss-3-7-2022.pdf">PDF</a>] </li>				
 <li>Gonçalo Raposo, Rui Ribeiro, Bruno Martins, and Luísa Coheur, <i>Question Rewriting? Assessing Its Importance for Conversational Question Answering</i>, Proceedings of the European Conference on Information Retrieval, 2022 [<a href="https://link.springer.com/chapter/10.1007/978-3-030-99739-7_23">PDF</a>] </li>								
 <li>Rita Parada Ramos, and Bruno Martins, Remote Sensing Image Captioning with Continuous Output Neural Models. Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2021 [<a href="https://dl.acm.org/doi/abs/10.1145/3474717.3483631">PDF</a>]</li>
 <li>João Coelho, João Magalhães, and Bruno Martins, Improving Neural Models for the Retrieval of Relevant Passages to Geographical Queries. Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2021 [<a href="https://dl.acm.org/doi/abs/10.1145/3474717.3483960">PDF</a>]</li>
@@ -795,6 +795,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://aaai.org/Conferences/AAAI-23/">AAAI'23</a> |
+						<a href="https://ecir2023.org">ECIR'23</a> |
 						<a href="https://simbig.org/SIMBig2022/">SIMBig'22</a> |
 						<a href="https://www.wsdm-conference.org/2023/">WSDM'23</a> |
 						<a href="https://ictai.computer.org/2022/">ICTAI'22</a> |
