--- a/index.html
+++ b/index.html
@@ -579,8 +579,8 @@ involved in several research projects related to geospatial aspects in informati
 			<!-- <li>André Neves, <i>Deep Learning for Remote Sensing Applications</i>, FCT-UNL (<i>ongoing co-supervision with Prof. João Moura Pires and Prof. Carlos Damásio</i>)</li> -->			
 			<li>Gonçalo Raposo, <i>Conversational Search</i>, IST (<i>ongoing co-supervision with Prof. Luísa Coheur</i>)</li>
 			<li>Isabel Coutinho, <i>Clinical Text Mining</i>, IST (<i>ongoing</i>)</li>
-			<!-- <li>João Coelho, <i>Neural Information Retrieval for Long Documents</i>, IST (<i>ongoing co-supervision with Prof. Jamie Callan and Prof. João Magalhães</i>)</li> -->
-			<!-- <li>João Silva, <i>Vision and Language Models for Remote Sensing Data</i>, IST (<i>ongoing co-supervision with Prof. Devis Tuia and Prof. João Magalhães</i>)</li> -->
+			<li>João Coelho, <i>Neural Information Retrieval for Long Documents</i>, IST (<i>ongoing co-supervision with Prof. Jamie Callan and Prof. João Magalhães</i>)</li>
+			<li>João Silva, <i>Vision and Language Models for Remote Sensing Data</i>, IST (<i>ongoing co-supervision with Prof. Devis Tuia and Prof. João Magalhães</i>)</li>
 			<!-- <li>Martin Mirakyan, <i>Neural Architecture Search</i>, IST (<i>ongoing co-supervision with Paolo Romano</i>)</li> -->
 			</ul>
 			<h3>MSc Students</h3>
