--- a/index.html
+++ b/index.html
@@ -219,8 +219,12 @@ involved in several research projects related to geospatial aspects in informati
 	</tr>
     	<tr>
 		<td>
-			2020/2021 | <a href="">Biomedical Informatics</a> (IST,MEIC,MEBiom)<br/>
-			2020/2021 | <a href="">Introduction to Databases</a> (MISE)<br/>
+			2022/2023 | <a href="">Spoken Language Processing</a> (IST,MEEC,MEIC,MECD)<br/>
+			2022/2023 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AAut-4/2022-2023/1-semestre">Machine Learning</a> (IST,MEEC)<br/>
+			2021/2022 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIBD/2021-2022/1-semestre">Information Systems and Databases</a> (IST,MEEC,MEBiom)<br/>
+			2020/2021 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TIS46/2020-2021/2-semestre">Biomedical Informatics</a> (IST,MEIC,MEBiom)<br/>
+			2020/2021 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/IBD46/2020-2021/2-semestre">Introduction to Databases</a> (MISE)<br/>
+			2020/2021 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIBD77/2020-2021/1-semestre">Information Systems and Databases</a> (IST,MEEC,MEBiom)<br/>			
 			2019/2020 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RGI13/2019-2020/1-semestre">Information Processing and Retrieval</a> (IST,MEIC,METI)<br/>
 			2019/2020 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIBD77/2019-2020/1-semestre">Information Systems and Databases</a> (IST,MEEC,MEBiom)<br/>
 			2018/2019 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TIS-IBiom/2018-2019/2-semestre">Biomedical Informatics</a> (IST,MEIC,MEBiom)<br/>
@@ -352,6 +356,9 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<!-- <li>João Silva, João Magalhães, Devis Tuia, and Bruno Martins, <i>Remote Sensing Visual Question Answering with a Self-Attention Multi-Modal Encoder</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2022 [<a href="">PDF</a>] </li>
+<li>João Monteiro, Bruno Martins, Miguel Costa, and João M. Pires, <i>A Co-Training Approach for Spatial Data Disaggregation</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2022 [<a href="">PDF</a>] </li> -->
+<li>Tiago Manuel Mesquita, Mariana Almeida, and Bruno Martins, <i>Dense Template Retrieval for Customer Support</i>, Proceedings of the International Conference on Computational Linguistics, 2022 [<a href="">PDF</a>] </li>
 <li>Gil Rocha, Luís Trigo, Henrique Lopes Cardoso, Rui Sousa-Silva, Paula Carvalho, Bruno Martins, and Miguel Won, <i>Annotating Arguments in a Corpus of Opinion Articles</i>, Proceedings of the International Conference on Language Resources and Evaluation, 2022 [<a href="http://www.lrec-conf.org/proceedings/lrec2022/pdf/2022.lrec-1.201.pdf">PDF</a>] </li>
 <li>Gil Rocha, Bernardo Leite, Luís Trigo, Henrique Lopes Cardoso, Rui Sousa Silva, Paula Carvalho, Bruno Martins, and Miguel Won, <i>Predicting Argument Density from Multiple Annotations</i>, Proceedings of the International Conference on Natural Language & Information Systems, 2022 [<a href="https://doi.org/10.1007/978-3-031-08473-7_21">PDF</a>] </li>
 <li>Marina Georgati, João Monteiro, Bruno Martins, and Carsten Keßler, <i>Spatial Disaggregation of Population Subgroups Leveraging Self-Trained Multi-Output Gradient Boosted Regression Trees</i>, Proceedings of the AGILE International Conference on Geographic Information Science, 2022 [<a href="https://agile-giss.copernicus.org/articles/3/5/2022/agile-giss-3-5-2022.pdf">PDF</a>] </li>
