--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Bruno Martins, and João Silva, <i>Towards Natural Language Interfaces for Interacting with Remote Sensing Data</i>, Proceedings of Spatial Data Science Symposium, 2022 [<a href="https://doi.org/10.25436/E2S88R">PDF</a>] </li>
 <!-- <li>João Silva, João Magalhães, Devis Tuia, and Bruno Martins, <i>Remote Sensing Visual Question Answering with a Self-Attention Multi-Modal Encoder</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2022 [<a href="">PDF</a>] </li>
 <li>João Monteiro, Bruno Martins, Miguel Costa, and João M. Pires, <i>A Co-Training Approach for Spatial Data Disaggregation</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2022 [<a href="">PDF</a>] </li> -->
 <li>Tiago Manuel Mesquita, Mariana Almeida, and Bruno Martins, <i>Dense Template Retrieval for Customer Support</i>, Proceedings of the International Conference on Computational Linguistics, 2022 [<a href="">PDF</a>] </li>
