--- a/index.html
+++ b/index.html
@@ -741,6 +741,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Diogo Ferrão, <a href=""><i>Object Detection Under Low-Light and Adverse Weather Conditions</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
 			<li>Mariana Chinopa, <a href=""><i>Geographically-Aware Image Captioning</i></a>, IST, 2023</li> <!-- ?? valores -->
 			<li>João Novo, <a href=""><i>Analysis of visual sensor data for monitoring of open spaces</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
+			<li>Diogo Ferreira, <a href=""><i>Time Series Forecasting for Disease/Mortality Data</i></a>, IST, 2023</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
