--- a/index.html
+++ b/index.html
@@ -806,7 +806,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
-						<a href="https://2023.eacl.org">EACL'23</a> |						
+						<a href="https://dh2023.adho.org">DH'23</a> |
+						<a href="https://2023.eacl.org">EACL'23</a> |	
 						<a href="https://aaai.org/Conferences/AAAI-23/">AAAI'23</a> |
 						<a href="https://ecir2023.org">ECIR'23</a> |
 						<a href="https://simbig.org/SIMBig2022/">SIMBig'22</a> |
