--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
+<li>Isabel Coutinho, and Bruno Martins, <i>Transformer-based Models for ICD-10 Coding of Death Certificates with Portuguese Text</i>, Journal of Biomedical Informatics, 2022 [<a href="">PDF</a>]</li>				
 <li>Rita Ramos, and Bruno Martins, <i>Using Neural Encoder-Decoder Models with Continuous Outputs for Remote Sensing Image Captioning</i>, IEEE Access, 2022 [<a href="https://doi.org/10.1109/ACCESS.2022.3151874">PDF</a>]</li>
 <li>Ana Cardodo, Bruno Martins, and Jacinto Estima, <i>A novel deep learning approach using contextual embeddings for toponym resolution</i>, ISPRS International Journal of Geo-Information, 2022 [<a href="https://www.mdpi.com/2220-9964/11/1/28">PDF</a>]</li>
 <li>Jacques Fize, Ludovic Moncla, and Bruno Martins, <i>Deep Learning for Toponym Resolution: Geocoding Based on Pairs of Toponyms</i>, ISPRS International Journal of Geo-Information, 2021 [<a href="https://www.mdpi.com/2220-9964/10/12/818">PDF</a>]</li>
