--- a/index.html
+++ b/index.html
@@ -725,13 +725,14 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Duarte Miranda, <a href=""><i>Neural Retrieval Models for the Portuguese Language</i></a>, IST, 2022 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- ?? valores -->				
 			<li>Pedro Marques, <a href=""><i>Recommendation of heterogenous wellness products</i></a>, IST, 2022 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->				
 			<li>Rafael Galhoz, <a href=""><i>Question Generation for the Portuguese Language</i></a>, IST, 2022 (<i>co-supervised with Prof. Pedro Santos</i>)</li> <!-- ?? valores -->				
-			<li>Ana Silva, <a href=""><i>ArgumentNext - Visualizing arguments in the real world</i></a>, IST, 2022 (<i>co-supervised with Prof. Daniel Gonçalves</i>)</li> <!-- ?? valores -->								
-			<li>Dora Lourenço, <a href=""><i>Explainable AI for Anti-Money Laundering</i></a>, IST, 2022 (<i>co-supervised with Dr. Pedro Saleiro</i>)</li> <!-- ?? valores -->
+			<li>Ana Silva, <a href=""><i>ArgumentNext - Visualizing arguments in the real world</i></a>, IST, 2022 (<i>co-supervised with Prof. Daniel Gonçalves</i>)</li> <!-- ?? valores -->
 			<li>Nichal Narotamo, <a href=""><i>Conversational Question Re-Writing</i></a>, IST, 2022 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- ?? valores -->
 			<li>Bruno Cardoso, <a href=""><i>Neural Retrieval Models for Matching Patients to Clinical Trials</i></a>, FCT/UNL, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->			
 			<li>Catarina Gatinho, <a href=""><i>Geospatial Language Understanding</i></a>, IST, 2022</li> <!-- ?? valores -->
 			<li>José Malaquias, <a href=""><i>Natural Language Processing Leveraging Entity-Aware Representations</i></a>, IST, 2022 (<i>co-supervised with Dr. Pedro Mota</i>)</li> <!-- ?? valores -->			
-			
+
+			<!-- <li>Dora Lourenço, <a href=""><i>Explainable AI for Anti-Money Laundering</i></a>, IST, 2022 (<i>co-supervised with Dr. Pedro Saleiro</i>)</li> -->				
+				
 			<li>Diogo Moura, <a href=""><i>Neural Models Models Relating Natural Language and Images</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>João Pereira, <a href=""><i>Neural Retrieval Models for Matching Patients to Clinical Trials</i></a>, IST, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->	
 			<li>Miguel Gonçalves, <a href=""><i>Transformer Models for Remote Sensing Image Segmentation</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
@@ -807,6 +808,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://text2story23.inesctec.pt">Text2Story'23</a> |
 						<a href="http://www.sigapp.org/sac/sac2023/">SAC'23</a> |
 						<a href="https://dh2023.adho.org">DH'23</a> |
 						<a href="https://2023.eacl.org">EACL'23</a> |	
