--- a/index.html
+++ b/index.html
@@ -735,6 +735,7 @@ involved in several research projects related to geospatial aspects in informati
 				
 			<li>Diogo Moura, <a href=""><i>Neural Models Models Relating Natural Language and Images</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>João Pereira, <a href=""><i>Neural Retrieval Models for Matching Patients to Clinical Trials</i></a>, IST, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->	
+			
 			<li>Miguel Gonçalves, <a href=""><i>Transformer Models for Remote Sensing Image Segmentation</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>Francisco Guedes, <a href=""><i>Visual Question Answering with Remote Sensing Imagery</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->						
 			<li>Gonçalo Mendes, <a href=""><i>Estimating Emotional Valence and Arousal with Transformer-Based Language Models</i></a>, IST, 2022</li> <!-- ?? valores -->						
@@ -1059,6 +1060,14 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+
+						<a href="BIO-ANAFRED">Dulce Canha</a> |	
+						<a href="">Alexandre Serra</a> |	
+						<a href="">João Gonçalves da Silva</a> |	
+						<a href="">Teresa Bernardino</a> |	
+						<a href="">João David</a> |	
+						<a href="BIO-VINGA">Raquel Félix</a> |						
+						
 						<a href="MECD-MARIO">Francisco Caldas</a> |
 						<a href="DEI-JOAO-PEDRO">Nuno Cordeiro</a> |
 						<a href="DEI-VINGA">Michael Madeira</a> |
