--- a/index.html
+++ b/index.html
@@ -721,9 +721,9 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Filipe Martins, <a href=""><i>Deep Learning Methods for Processing Digitized Herbarium Specimens</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 12 valores -->
 			<li>Bernardo Moreira, <a href=""><i>Neural Retrieval Models for Argument Retrieval</i></a>, FEUP, 2022 (<i>co-supervised with Prof. Henrique Lopes Cardoso</i>)</li> <!-- 17 valores -->						
 
-			<li>Pedro Marques, <a href=""><i>Recommendation of Fitness Venues Using Graph Neural Networks</i></a>, IST, 2022 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 18 valores -->
-				
-			<li>André Leite, <a href=""><i>Neural Models for Generating Clinically Accurate Chest X-Ray Reports</i></a>, IST, 2022 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
+			<li>Pedro Marques, <a href=""><i>Recommendation of Fitness Venues Using Graph Neural Networks</i></a>, IST, 2022 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 18 valores -->				
+			<li>André Leite, <a href=""><i>Neural Models for Generating Clinically Accurate Chest X-Ray Reports</i></a>, IST, 2022 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- 16 valores -->
+
 			<li>Duarte Miranda, <a href=""><i>Neural Retrieval Models for the Portuguese Language</i></a>, IST, 2022 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- ?? valores -->				
 			<li>Rafael Galhoz, <a href=""><i>Question Generation for the Portuguese Language</i></a>, IST, 2022 (<i>co-supervised with Prof. Pedro Santos</i>)</li> <!-- ?? valores -->				
 			<li>Ana Silva, <a href=""><i>ArgumentNext - Visualizing arguments in the real world</i></a>, IST, 2022 (<i>co-supervised with Prof. Daniel Gonçalves</i>)</li> <!-- ?? valores -->
