--- a/index.html
+++ b/index.html
@@ -748,6 +748,11 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Mariana Chinopa, <a href=""><i>Geographically-Aware Image Captioning</i></a>, IST, 2023</li> <!-- ?? valores -->
 			<li>João Novo, <a href=""><i>Analysis of visual sensor data for monitoring of open spaces</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
 			<li>Diogo Ferreira, <a href=""><i>Time Series Forecasting for Disease/Mortality Data</i></a>, IST, 2023</li> <!-- ?? valores -->
+
+			<li>Manuel Miranda, <a href=""><i>Finding Bounding Boxes for Visual Answers to Natural Language Questions</i></a>, IST, 2023</li> <!-- ?? valores -->			
+			<li>Miguel Carvalho, <a href=""><i>Conversational Question Answering on Visual Contents</i></a>, IST, 2023 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->			
+			<!-- <li>Gonçalo Marques, <a href=""><i>Efficient Neural Information Retrieval Methods</i></a>, IST, 2023 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> --> <!-- ?? valores -->
+			<!-- <li>Vasco Rocha, <a href=""><i>Improving Differentiable Neural Architecture Search</i></a>, IST, 2023 (<i>co-supervised with Prof. Paolo Romano</i>)</li> --> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
