--- a/index.html
+++ b/index.html
@@ -751,8 +751,8 @@ involved in several research projects related to geospatial aspects in informati
 
 			<li>Manuel Miranda, <a href=""><i>Finding Bounding Boxes for Visual Answers to Natural Language Questions</i></a>, IST, 2023</li> <!-- ?? valores -->			
 			<li>Miguel Carvalho, <a href=""><i>Conversational Question Answering on Visual Contents</i></a>, IST, 2023 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->			
-			<!-- <li>Gonçalo Marques, <a href=""><i>Efficient Neural Information Retrieval Methods</i></a>, IST, 2023 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> --> <!-- ?? valores -->
-			<!-- <li>Vasco Rocha, <a href=""><i>Improving Differentiable Neural Architecture Search</i></a>, IST, 2023 (<i>co-supervised with Prof. Paolo Romano</i>)</li> --> <!-- ?? valores -->
+			<li>Gonçalo Marques, <a href=""><i>Efficient Neural Information Retrieval Methods</i></a>, IST, 2023 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- ?? valores -->
+			<li>Vasco Rocha, <a href=""><i>Improving Differentiable Neural Architecture Search</i></a>, IST, 2023 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
@@ -768,8 +768,9 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
-						<a href="http://essir2022.org">ESSIR'22</a> |		
-						<a href="http://lxmls.it.pt/">LxMLS'22</a> |						
+						<a href="http://lxmls.it.pt/">LxMLS'23</a> |
+						<a href="http://essir2022.org">ESSIR'22</a> |
+						<a href="http://lxmls.it.pt/2022/">LxMLS'22</a> |
 						<a href="https://ludovicmoncla.github.io/sigspatial-geohumanities-2022/">SIGSPATIAL GeoHumanities'22</a> |
 						<a href="https://udi.ornl.gov/geoai2022">GeoAI'22</a> |						
 						<a href="http://epia2022.inesc-id.pt">EPIA'22</a> |
@@ -815,6 +816,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://isd2023.inesc-id.pt/">ISD'23</a> |
 						<a href="https://text2story23.inesctec.pt">Text2Story'23</a> |
 						<a href="http://www.sigapp.org/sac/sac2023/">SAC'23</a> |
 						<a href="https://dh2023.adho.org">DH'23</a> |
@@ -1066,7 +1068,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
-
+						<a href="DEEC-Alexandre">Mariana Alves</a> |						
 						<a href="DEI-JOAQUIMJORGE">André Luís</a> |
 						<a href="BIO-ANAFRED">Dulce Canha</a> |	
 						<a href="DEI-ALBERTO">Alexandre Serra</a> |	
