--- a/index.html
+++ b/index.html
@@ -584,14 +584,15 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>PhD Students</h3>
 			<ul>
 			<li>Tiago Gonçalves, <i>Visual Analysis of Human Mobility Data</i>, FCUL (<i>co-supervised with Prof. Ana Paula Afonso</i>)</li>
-			<li>João Monteiro, <i>Deep Learning for Geospatial Data Analysis Applications</i>, IST (<i>ongoing co-supervision with Prof. João Moura Pires</i>)</li>
+			<li>João Monteiro, <i>Deep Learning for Geospatial Data Analysis Applications</i>, IST (<i>co-supervision with Prof. João Moura Pires</i>)</li>
 			<li>Luís Borges, <i>Neural Information Retrieval</i>, IST/CMU-PT (<i>ongoing co-supervision with Prof. Jamie Callan</i>)</li>
 			<li>Rita Ramos, <i>Deep Learning Methods Bridging Language and Vision</i>, IST/KU.DK (<i>ongoing co-supervision with Prof. Desmond Elliott</i>)</li>
 			<!-- <li>André Neves, <i>Deep Learning for Remote Sensing Applications</i>, FCT-UNL (<i>ongoing co-supervision with Prof. João Moura Pires and Prof. Carlos Damásio</i>)</li> -->			
 			<li>Gonçalo Raposo, <i>Conversational Search</i>, IST (<i>ongoing co-supervision with Prof. Luísa Coheur</i>)</li>
 			<li>Isabel Coutinho, <i>Clinical Text Mining</i>, IST (<i>ongoing</i>)</li>
-			<li>João Coelho, <i>Neural Information Retrieval for Long Documents</i>, IST (<i>ongoing co-supervision with Prof. Jamie Callan and Prof. João Magalhães</i>)</li>
+			<li>João Coelho, <i>Neural Information Retrieval for Long Documents</i>, IST/CMU-PT (<i>ongoing co-supervision with Prof. Jamie Callan and Prof. João Magalhães</i>)</li>
 			<li>João Silva, <i>Vision and Language Models for Remote Sensing Data</i>, IST (<i>ongoing co-supervision with Prof. Devis Tuia and Prof. João Magalhães</i>)</li>
+			<li>Artur Guimarães, <i>Information Retrieval over Clinical Documents</i>, IST (<i>ongoing co-supervision with Prof. João Magalhães</i>)</li>				
 			<!-- <li>Martin Mirakyan, <i>Neural Architecture Search</i>, IST (<i>ongoing co-supervision with Paolo Romano</i>)</li> -->
 			</ul>
 			<h3>MSc Students</h3>
