--- a/index.html
+++ b/index.html
@@ -720,19 +720,17 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Filipe Amaral, <a href=""><i>Argumentation mining from textual documents combining deep learning and reasoning</i></a>, IST, 2021 (<i>co-supervised with Prof. Helena Sofia Pinto</i>)</li> <!-- 17 valores -->
 			<li>Artur Guimarães, <a href=""><i>Key-phrase Extraction Combining Graph-Based Methods and Neural Language Models</i></a>, IST, 2021 (<i>co-supervised with Prof. Mathieu Roche</i>)</li> <!-- 18 valores -->
 			<li>Filipe Martins, <a href=""><i>Deep Learning Methods for Processing Digitized Herbarium Specimens</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 12 valores -->
-			<li>Bernardo Moreira, <a href=""><i>Neural Retrieval Models for Argument Retrieval</i></a>, FEUP, 2022 (<i>co-supervised with Prof. Henrique Lopes Cardoso</i>)</li> <!-- 17 valores -->						
-
+			<li>Bernardo Moreira, <a href=""><i>Neural Retrieval Models for Argument Retrieval</i></a>, FEUP, 2022 (<i>co-supervised with Prof. Henrique Lopes Cardoso</i>)</li> <!-- 17 valores -->
 			<li>Pedro Marques, <a href=""><i>Recommendation of Fitness Venues Using Graph Neural Networks</i></a>, IST, 2022 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 18 valores -->				
 			<li>André Leite, <a href=""><i>Neural Models for Generating Clinically Accurate Chest X-Ray Reports</i></a>, IST, 2022 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- 16 valores -->
 			<li>Nichal Narotamo, <a href=""><i>Conversational Question Re-Writing</i></a>, IST, 2022 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- 18 valores -->
 			<li>Ana Silva, <a href=""><i>ArgumentNext - Visualizing arguments in the real world</i></a>, IST, 2022 (<i>co-supervised with Prof. Daniel Gonçalves</i>)</li> <!-- 19 valores -->
-				
-			<li>Rafael Galhoz, <a href=""><i>Question Generation for the Portuguese Language</i></a>, IST, 2022 (<i>co-supervised with Prof. Pedro Santos</i>)</li> <!-- ?? valores -->				
-			<li>Bruno Cardoso, <a href=""><i>Neural Retrieval Models for Matching Patients to Clinical Trials</i></a>, FCT/UNL, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->			
+			<li>Rafael Galhoz, <a href=""><i>Question Generation for the Portuguese Language</i></a>, IST, 2022 (<i>co-supervised with Prof. Pedro Santos</i>)</li> <!-- 18 valores -->
+			<li>Diogo Moura, <a href=""><i>Neural Models Models Relating Natural Language and Images</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 14 valores -->
+			<li>João Pereira, <a href=""><i>Dual Encoder Models for Matching Patients to Clinical Trials</i></a>, IST, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- 18 valores -->
+			<li>Bruno Cardoso, <a href=""><i>Neural Retrieval Models for Matching Patients to Clinical Trials</i></a>, FCT/UNL, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->
 
 			<!-- <li>Dora Lourenço, <a href=""><i>Explainable AI for Anti-Money Laundering</i></a>, IST, 2022 (<i>co-supervised with Dr. Pedro Saleiro</i>)</li> -->								
-			<li>Diogo Moura, <a href=""><i>Neural Models Models Relating Natural Language and Images</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
-			<li>João Pereira, <a href=""><i>Neural Retrieval Models for Matching Patients to Clinical Trials</i></a>, IST, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->	
 
 			<li>Catarina Gatinho, <a href=""><i>Geospatial Language Understanding</i></a>, IST, 2022</li> <!-- ?? valores -->
 			<li>José Malaquias, <a href=""><i>Natural Language Processing Leveraging Entity-Aware Representations</i></a>, IST, 2022 (<i>co-supervised with Dr. Pedro Mota</i>)</li> <!-- ?? valores -->							
