--- a/index.html
+++ b/index.html
@@ -535,6 +535,7 @@ involved in several research projects related to geospatial aspects in informati
     <tr>
 		<td>
 			<ul>
+<li>Center for Responsible AI (RRP C645008882-00000055)</li>
 <li>Data sciEnce Tools for Epidemiologic surveillance using multiple sourCes of daTa - Improved flu/COVID-19 tracking and detection of new outbreaks (DETECT - FCT DSAIPA/DS/0133/2020)</li>
 <li>Integrating data and models to understand Dikes Failure Prorocesses (DikesFPro - FCT PTDC/ECI-EGC/7739/2020)</li>				
 <li>Identificação Precoce e Caracterização dos doentes com COVID-19 Através da Análise de Imagens de Radiografia Convencional (DeepPathCOVIDx - P2020 694689)</li>
