--- a/index.html
+++ b/index.html
@@ -818,6 +818,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://ds2023.inesctec.pt/">DS'23</a> |
+						<a href="https://sigir.org/sigir2023/">SIGIR'23</a> |
 						<a href="https://isd2023.inesc-id.pt/">ISD'23</a> |
 						<a href="https://text2story23.inesctec.pt">Text2Story'23</a> |
 						<a href="http://www.sigapp.org/sac/sac2023/">SAC'23</a> |
