--- a/index.html
+++ b/index.html
@@ -746,9 +746,9 @@ involved in several research projects related to geospatial aspects in informati
 			<li>João Pedras, <a href=""><i>Remote Sensing Visual Question Answering</i></a>, IST, 2023</li> <!-- ?? valores -->
 			<li>Eduardo Ladeiras, <a href=""><i>Visually Grounded Speech Recognition </i></a>, IST, 2023 (<i>co-supervised with Prof. Alberto Abad</i>)</li> <!-- ?? valores -->
 			<li>Diogo Silva, <a href=""><i>Dialogue Summarization with Retrieval-Augmented Transformers</i></a>, IST, 2023 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
-			<li>Diogo Ferrão, <a href=""><i>Object Detection Under Low-Light and Adverse Weather Conditions</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
+			<li>Diogo Ferrão, <a href=""><i>Urban Acoustic Scene Classification</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
 			<li>Mariana Chinopa, <a href=""><i>Geographically-Aware Image Captioning</i></a>, IST, 2023</li> <!-- ?? valores -->
-			<li>João Novo, <a href=""><i>Analysis of visual sensor data for monitoring of open spaces</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
+			<li>João Novo, <a href=""><i>Object Detection Under Low-Light and Adverse Weather Conditions</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
 			<li>Diogo Ferreira, <a href=""><i>Time Series Forecasting for Disease/Mortality Data</i></a>, IST, 2023</li> <!-- ?? valores -->
 
 			<li>Manuel Miranda, <a href=""><i>Finding Bounding Boxes for Visual Answers to Natural Language Questions</i></a>, IST, 2023</li> <!-- ?? valores -->			
