--- a/index.html
+++ b/index.html
@@ -819,6 +819,9 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						
+						
+						<a href="https://www.nodalida2023.fo">NoDaLiDa'23</a> |
 						<a href="https://ds2023.inesctec.pt/">DS'23</a> |
 						<a href="https://sigir.org/sigir2023/">SIGIR'23</a> |
 						<a href="https://isd2023.inesc-id.pt/">ISD'23</a> |
