--- a/index.html
+++ b/index.html
@@ -756,6 +756,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Miguel Carvalho, <a href=""><i>Conversational Question Answering on Visual Contents</i></a>, IST, 2023 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->			
 			<li>Gonçalo Marques, <a href=""><i>Efficient Neural Information Retrieval Methods</i></a>, IST, 2023 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- ?? valores -->
 			<li>Vasco Rocha, <a href=""><i>Improving Differentiable Neural Architecture Search</i></a>, IST, 2023 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- ?? valores -->
+			<li>Helder Dias, <a href=""><i>Multi-Document Key-Phrase Extraction with Transformer Models and Geospatial Association Measures</i></a>, IST, 2023</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
