--- a/index.html
+++ b/index.html
@@ -758,6 +758,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Vasco Rocha, <a href=""><i>Improving Differentiable Neural Architecture Search</i></a>, IST, 2023 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- ?? valores -->
 			<li>Helder Dias, <a href=""><i>Multi-Document Key-Phrase Extraction with Transformer Models and Geospatial Association Measures</i></a>, IST, 2023</li> <!-- ?? valores -->
 			<li>João Silva, <a href=""><i>Generating Multilingual Captions for Images and Videos With Transformer Neural Models</i></a>, IST, 2023 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- ?? valores -->
+			<li>Gonçalo Gomes, <a href=""><i>Refining Multi-Label Clinical Text Classifiers for Text Quantification</i></a>, IST, 2023</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
