--- a/index.html
+++ b/index.html
@@ -822,6 +822,9 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://sites.google.com/view/socialnlp2023/">SocialNLP'23</a> |
+						<a href="https://geo-ext.github.io">GeoExT'23</a> |
+						<a href="https://en.sce.ac.il/news/iact23">IACT’23</a> |
 						<a href="https://www.nodalida2023.fo">NoDaLiDa'23</a> |
 						<a href="https://ds2023.inesctec.pt/">DS'23</a> |
 						<a href="https://sigir.org/sigir2023/">SIGIR'23</a> |
@@ -840,9 +843,9 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://aaclweb.org">AACL-IJCNLP'22</a> |
 						<a href="https://agile-online.org/conference-2022">AGILE'22</a> |
 						<a href="http://tpdl2022.dei.unipd.it">TPDL'22</a> |
-						<a href="https://ds2022.sciencesconf.org/">DS'22</a> |						
-						<a href="https://sites.google.com/view/socialnlp2022/">SocialNLP'22</a> |						
-						<a href="https://dhere.de/locweb/locweb2022/">LocWeb'22</a> |						
+						<a href="https://ds2022.sciencesconf.org/">DS'22</a> |
+						<a href="https://sites.google.com/view/socialnlp2022/">SocialNLP'22</a> |
+						<a href="https://dhere.de/locweb/locweb2022/">LocWeb'22</a> |
 						<a href="https://text2story22.inesctec.pt">Text2Story'22</a> |
 						<a href="https://ecir2022.org">ECIR'22</a> (Recognized Reviewer Award) |
 						<a href="http://www.sigapp.org/sac/sac2022/">SAC'22</a> |
