--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Rita Ramos, Bruno Martins, Desmond Elliott, and Yova Kementchedjhieva<i>SmallCap: Lightweight Image Captioning Prompted with Retrieval Augmentation </i>, Proceedings of the IEEE/CVF Computer Vision and Pattern Recognition Conference, 2023 [<a href="">PDF</a>]</li>				
 <li>Rita Ramos, Desmond Elliott, and Bruno Martins, <i>Retrieval-augmented Image Captioning</i>, Proceedings of the Conference of the European Chapter of the Association for Computational Linguistics, 2023 [<a href="">PDF</a>]</li>
 <li>Gonçalo Mendes, and Bruno Martins, <i>Quantifying Valence and Arousal in Text with Multilingual Pre-trained Transformers</i>, Proceedings of the European Conference on Information Retrieval, 2023 [<a href="">PDF</a>]</li>				
 <li>Bruno Martins, and João Silva, <i>Towards Natural Language Interfaces for Interacting with Remote Sensing Data</i>, Proceedings of Spatial Data Science Symposium, 2022 [<a href="https://doi.org/10.25436/E2S88R">PDF</a>] </li>
