--- a/index.html
+++ b/index.html
@@ -326,8 +326,9 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
-<li>Henrique Lopes Cardoso, Rui Sousa-Silva, Paula Carvalho, and Bruno Martins, <i>Argumentation models and their use in corpus annotation: Practice, prospects, and challenges</i>, Natural Language Engineering, 2023 [<a href="">PDF</a>]</li>				
-<li>Isabel Coutinho, and Bruno Martins, <i>Transformer-based Models for ICD-10 Coding of Death Certificates with Portuguese Text</i>, Journal of Biomedical Informatics, 2022 [<a href="">PDF</a>]</li>
+<!-- <li>João Daniel Silva, Bruno Martins, Joãoo Magalhães, <i>Contrastive Training of a Multimodal Encoder for Medical Visual Question Answering</i>, Intelligent Systems with Applications, 2023 [<a href="">PDF</a>]</li> -->
+<li>Henrique Lopes Cardoso, Rui Sousa-Silva, Paula Carvalho, and Bruno Martins, <i>Argumentation models and their use in corpus annotation: Practice, prospects, and challenges</i>, Natural Language Engineering, 2023 [<a href="https://doi.org/10.1017/S1351324923000062">PDF</a>]</li>
+<li>Isabel Coutinho, and Bruno Martins, <i>Transformer-based Models for ICD-10 Coding of Death Certificates with Portuguese Text</i>, Journal of Biomedical Informatics, 2022 [<a href="https://doi.org/10.1016/j.jbi.2022.104232">PDF</a>]</li>
 <li>Rita Ramos, and Bruno Martins, <i>Using Neural Encoder-Decoder Models with Continuous Outputs for Remote Sensing Image Captioning</i>, IEEE Access, 2022 [<a href="https://doi.org/10.1109/ACCESS.2022.3151874">PDF</a>]</li>
 <li>Ana Cardodo, Bruno Martins, and Jacinto Estima, <i>A novel deep learning approach using contextual embeddings for toponym resolution</i>, ISPRS International Journal of Geo-Information, 2022 [<a href="https://www.mdpi.com/2220-9964/11/1/28">PDF</a>]</li>
 <li>Jacques Fize, Ludovic Moncla, and Bruno Martins, <i>Deep Learning for Toponym Resolution: Geocoding Based on Pairs of Toponyms</i>, ISPRS International Journal of Geo-Information, 2021 [<a href="https://www.mdpi.com/2220-9964/10/12/818">PDF</a>]</li>
@@ -360,7 +361,7 @@ involved in several research projects related to geospatial aspects in informati
 			<ul>
 <li>Rita Ramos, Bruno Martins, Desmond Elliott, and Yova Kementchedjhieva, <i>SmallCap: Lightweight Image Captioning Prompted with Retrieval Augmentation </i>, Proceedings of the IEEE/CVF Computer Vision and Pattern Recognition Conference, 2023 [<a href="">PDF</a>]</li>				
 <li>Rita Ramos, Desmond Elliott, and Bruno Martins, <i>Retrieval-augmented Image Captioning</i>, Proceedings of the Conference of the European Chapter of the Association for Computational Linguistics, 2023 [<a href="">PDF</a>]</li>
-<li>Gonçalo Mendes, and Bruno Martins, <i>Quantifying Valence and Arousal in Text with Multilingual Pre-trained Transformers</i>, Proceedings of the European Conference on Information Retrieval, 2023 [<a href="">PDF</a>]</li>				
+<li>Gonçalo Mendes, and Bruno Martins, <i>Quantifying Valence and Arousal in Text with Multilingual Pre-trained Transformers</i>, Proceedings of the European Conference on Information Retrieval, 2023 [<a href="https://doi.org/10.1007/978-3-031-28244-7_6">PDF</a>]</li>				
 <li>Bruno Martins, and João Silva, <i>Towards Natural Language Interfaces for Interacting with Remote Sensing Data</i>, Proceedings of Spatial Data Science Symposium, 2022 [<a href="https://doi.org/10.25436/E2S88R">PDF</a>] </li>
 <li>João Silva, João Magalhães, Devis Tuia, and Bruno Martins, <i>Remote Sensing Visual Question Answering with a Self-Attention Multi-Modal Encoder</i>, Proceedings of the ACM SIGSPATIAL Workshop on Geospatial Artifician Intelligence, 2022 [<a href="">PDF</a>] </li>
 <li>João Monteiro, Bruno Martins, Miguel Costa, and João M. Pires, <i>A Co-Training Approach for Spatial Data Disaggregation</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2022 [<a href="">PDF</a>] </li>
@@ -747,7 +748,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Francisco Guedes, <a href=""><i>Visual Question Answering with Remote Sensing Imagery</i></a>, IST, 2023 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->						
 						
 			<li>João Pedras, <a href=""><i>Remote Sensing Visual Question Answering</i></a>, IST, 2023</li> <!-- ?? valores -->
-			<li>Eduardo Ladeiras, <a href=""><i>Visually Grounded Speech Recognition </i></a>, IST, 2023 (<i>co-supervised with Prof. Alberto Abad</i>)</li> <!-- ?? valores -->
+			<!-- <li>Eduardo Ladeiras, <a href=""><i>Visually Grounded Speech Recognition </i></a>, IST, 2023 (<i>co-supervised with Prof. Alberto Abad</i>)</li> --> <!-- ?? valores -->
 			<li>Diogo Silva, <a href=""><i>Dialogue Summarization with Retrieval-Augmented Transformers</i></a>, IST, 2023 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
 			<li>Diogo Ferrão, <a href=""><i>Urban Acoustic Scene Classification</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
 			<li>Mariana Chinopa, <a href=""><i>Geographically-Aware Image Captioning</i></a>, IST, 2023</li> <!-- ?? valores -->
@@ -824,6 +825,11 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://sigspatial2023.sigspatial.org">SIGSPATIAL'23</a> |
+						<a href="https://ach2023.ach.org/">ACH'23</a> |						
+						<a href="https://2023.aclweb.org">ACL'23</a> |
+						<a href="https://giscience2023.github.io">GIScience'23</a> |
+						<a href="https://agile-online.org/conference-2023">AGILE'23</a> |
 						<a href="https://sites.google.com/view/socialnlp2023/">SocialNLP'23</a> |
 						<a href="https://geo-ext.github.io">GeoExT'23</a> |
 						<a href="https://en.sce.ac.il/news/iact23">IACT’23</a> |
@@ -837,8 +843,8 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://2023.eacl.org">EACL'23</a> |	
 						<a href="https://aaai.org/Conferences/AAAI-23/">AAAI'23</a> |
 						<a href="https://ecir2023.org">ECIR'23</a> |
-						<a href="https://simbig.org/SIMBig2022/">SIMBig'22</a> |
 						<a href="https://www.wsdm-conference.org/2023/">WSDM'23</a> |
+						<a href="https://simbig.org/SIMBig2022/">SIMBig'22</a> |
 						<a href="https://ictai.computer.org/2022/">ICTAI'22</a> |
 						<a href="https://conll.org">CoNLL'22</a> |
 						<a href="https://2022.emnlp.org">EMNLP'22</a> |
@@ -1050,7 +1056,8 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://www.linkedin.com/in/fernandoblalves/">Fernando Alves</a> |
 						<a href="https://deepai.org/machine-learning/researcher/daniel-loureiro">Daniel Loureiro</a> |
 						<a href="https://scholar.google.com/citations?user=Vbw_-e8AAAAJ&hl=en">Gil Rocha</a> |
-
+						
+						<a href="https://scholar.google.com/citations?user=8SXp2n4AAAAJ">Haonan Li</a> |
 						<a href="https://www.linkedin.com/in/rui-portocarrero-sarmento-214564197/">Rui Sarmento</a> |
 						<a href="https://welcome.isr.tecnico.ulisboa.pt/author/danielamedley/">Daniela Oliveira Medley</a> |
 						<a href="https://www.linkedin.com/in/joaofigsilva/?originalSubdomain=pt">João Manuel Silva</a> |
