--- a/index.html
+++ b/index.html
@@ -1049,12 +1049,14 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
+						
 						<a href="https://nunonmg.github.io/">Nuno Guerreiro</a> |
 						<a href="https://orcid.org/0000-0002-0362-6100">Herbert Pinto</a> |
 						<a href="https://www.linkedin.com/in/afonso-salgado-sousa/?originalSubdomain=pt">Afonso Sousa</a> |
 						<a href="https://vbn.aau.dk/en/persons/146477">Marina Georgati</a> |
 						<a href="https://www.linkedin.com/in/fernandoblalves/">Fernando Alves</a> |
 						<a href="https://scholar.google.com/citations?user=Vbw_-e8AAAAJ&hl=en">Gil Rocha</a> |
+						<a href="https://mtreviso.github.io">Marcos Treviso</a> |
 
 						<a href="http://danlou.github.io">Daniel Loureiro</a> |						
 						<a href="https://www.hlt.inesc-id.pt/w/Eugénio_Ribeiro">Eugénio Alves Ribeiro</a> |						
