--- a/index.html
+++ b/index.html
@@ -825,6 +825,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://icmi.acm.org/2023/">ICMI'23</a> |
 						<a href="https://sigspatial2023.sigspatial.org">SIGSPATIAL'23</a> |
 						<a href="https://ach2023.ach.org/">ACH'23</a> |						
 						<a href="https://2023.aclweb.org">ACL'23</a> |
