--- a/index.html
+++ b/index.html
@@ -826,7 +826,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
-						<a href="https://propor2024.citius.gal">PROPOR'24</a> |						
+						<a href="https://propor2024.citius.gal">PROPOR'24</a> |
+						<a href="https://2023.emnlp.org">EMNLP'23</a> |						
 						<a href="http://www.ijcnlp-aacl2023.org">AACL'23</a> |
 						<a href="https://icmi.acm.org/2023/">ICMI'23</a> |
 						<a href="https://sigspatial2023.sigspatial.org">SIGSPATIAL'23</a> |
