--- a/index.html
+++ b/index.html
@@ -359,6 +359,8 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Luís Borges, Jamie Callan, Bruno Martins, <i>KALE: Using a K-Sparse Projector for Lexical Expansion</i>, Proceedings of the ACM SIGIR International Conference on the Theory of Information Retrieval, 2023 [<a href="">PDF</a>]</li>
+<li>Filipe Amaral, Helena Sofia Pinto, Bruno Martins, <i>Argumentation Mining from Textual Documents Combining Deep Learning and Reasoning</i>, Proceedings of the Portuguese Conference on Artificial Intelligence, 2023 [<a href="">PDF</a>]</li>
 <li>Rita Ramos, Bruno Martins, and Desmond Elliott, <i>LMCap: Few-shot Multilingual Image Captioning by Retrieval Augmented Language Model Prompting</i>, Findings of the Association for Computational Linguistics, 2023 [<a href="https://arxiv.org/abs/2305.19821">PDF</a>]</li>
 <li>Rita Ramos, Bruno Martins, Desmond Elliott, and Yova Kementchedjhieva, <i>SmallCap: Lightweight Image Captioning Prompted with Retrieval Augmentation</i>, Proceedings of the IEEE/CVF Computer Vision and Pattern Recognition Conference, 2023 [<a href="https://arxiv.org/abs/2209.15323">PDF</a>]</li>
 <li>Rita Ramos, Desmond Elliott, and Bruno Martins, <i>Retrieval-augmented Image Captioning</i>, Proceedings of the Conference of the European Chapter of the Association for Computational Linguistics, 2023 [<a href="https://arxiv.org/abs/2302.08268">PDF</a>]</li>
