--- a/index.html
+++ b/index.html
@@ -765,6 +765,13 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Helder Dias, <a href=""><i>Multi-Document Key-Phrase Extraction with Transformer Models and Geospatial Association Measures</i></a>, IST, 2023</li> <!-- ?? valores -->
 			<li>João Silva, <a href=""><i>Generating Multilingual Captions for Images and Videos With Transformer Neural Models</i></a>, IST, 2023 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- ?? valores -->
 			<li>Gonçalo Gomes, <a href=""><i>Refining Multi-Label Clinical Text Classifiers for Text Quantification</i></a>, IST, 2023</li> <!-- ?? valores -->
+
+			<li>Catarina Valério, <a href=""><i>Using Large Language Models to Summarize Patient-Physician Dialogues into Medical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- ?? valores -->
+			<li>Inês Mota, <a href=""><i>Using Large Language Models to Compose Discharge Summaries from Clinical Notes</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- ?? valores -->
+			<li>Leonor Barreiros, <a href=""><i>Semi-Supervised Medical Entity Linking</i></a>, IST, 2024 (<i>co-supervised with Dr. Gonçalo Correia</i>)</li> <!-- ?? valores -->			
+			<li>Diogo Branco, <a href=""><i>Adapting large language models for the domain of clinical trials</i></a>, IST, 2024 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
+			<li>Manuel Palo, <a href=""><i>Translating sign language into text with large language models</i></a>, IST, 2024 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
+			<li>Afonso Certo , <a href=""><i>End-to-End Robot Task Planning from Voice Commands</i></a>, IST, 2024 (<i>co-supervised with Dr. Carlos Azevedo and Prof. Pedro U. Lima</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
@@ -828,6 +835,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://www.wsdm-conference.org/2024/">WSDM'24</a> |						
 						<a href="https://propor2024.citius.gal">PROPOR'24</a> |
 						<a href="https://conll.org">CoNLL'23</a> |	
 						<a href="https://2023.emnlp.org">EMNLP'23</a> |						
