--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ involved in several research projects related to geospatial aspects in informati
     <tr>
 		<td>
 			<ul>
-<li>Center for Responsible AI (RRP C645008882-00000055)</li>
+<li><a href="https://centerforresponsible.ai">Center for Responsible AI</a> (RRP C645008882-00000055)</li>
 <li>Data sciEnce Tools for Epidemiologic surveillance using multiple sourCes of daTa - Improved flu/COVID-19 tracking and detection of new outbreaks (DETECT - FCT DSAIPA/DS/0133/2020)</li>
 <li>Integrating data and models to understand Dikes Failure Prorocesses (DikesFPro - FCT PTDC/ECI-EGC/7739/2020)</li>				
 <li>Identificação Precoce e Caracterização dos doentes com COVID-19 Através da Análise de Imagens de Radiografia Convencional (DeepPathCOVIDx - P2020 694689)</li>
@@ -748,12 +748,12 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Miguel Gonçalves, <a href=""><i>Transformer Models for Remote Sensing Image Segmentation</i></a>, IST, 2023 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 19 valores -->
 			<li>Francisco Guedes, <a href=""><i>Visual Question Answering with Remote Sensing Imagery</i></a>, IST, 2023 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 18 valores -->
 			<li>Catarina Gatinho, <a href=""><i>Geospatial Language Understanding</i></a>, IST, 2023</li> <!-- 15 valores -->
+			<li>João Novo, <a href=""><i>Object Detection Under Low-Light and Adverse Weather Conditions</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- 17 valores -->
 				
 			<li>João Pedras, <a href=""><i>Remote Sensing Visual Question Answering</i></a>, IST, 2023</li> <!-- ?? valores -->
 			<li>Diogo Silva, <a href=""><i>Dialogue Summarization with Retrieval-Augmented Transformers</i></a>, IST, 2023 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
 			<li>Diogo Ferrão, <a href=""><i>Urban Acoustic Scene Classification</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
 			<li>Mariana Chinopa, <a href=""><i>Geographically-Aware Image Captioning</i></a>, IST, 2023</li> <!-- ?? valores -->
-			<li>João Novo, <a href=""><i>Object Detection Under Low-Light and Adverse Weather Conditions</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
 			<li>Diogo Ferreira, <a href=""><i>Time Series Forecasting for Disease/Mortality Data</i></a>, IST, 2023</li> <!-- ?? valores -->
 
 			<li>Eduardo Ladeiras, <a href=""><i>Visually Grounded Speech Recognition </i></a>, IST, 2023</li> <!-- ?? valores -->							
