--- a/index.html
+++ b/index.html
@@ -219,7 +219,9 @@ involved in several research projects related to geospatial aspects in informati
 	</tr>
     	<tr>
 		<td>
-			2022/2023 | <a href="">Spoken Language Processing</a> (IST,MEEC,MEIC,MECD)<br/>
+			2023/2024 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PF/2023-2024/2-semestre">Spoken Language Processing</a> (IST,MEEC,MEIC,MECD)<br/>
+			2023/2024 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AAut-4/2023-2024/1-semestre">Machine Learning</a> (IST,MEEC)<br/>
+			2022/2023 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PF/2022-2023/2-semestre">Spoken Language Processing</a> (IST,MEEC,MEIC,MECD)<br/>
 			2022/2023 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AAut-4/2022-2023/1-semestre">Machine Learning</a> (IST,MEEC)<br/>
 			2021/2022 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIBD/2021-2022/1-semestre">Information Systems and Databases</a> (IST,MEEC,MEBiom)<br/>
 			2020/2021 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TIS46/2020-2021/2-semestre">Biomedical Informatics</a> (IST,MEIC,MEBiom)<br/>
