--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Gonçalo Raposo, Luisa Coheur and Bruno Martins, <i>Prompting, Retrieval, Training: An exploration of different approaches for task-oriented dialogue generation</i>, Proceedings of the SIGDIAL Meeting on Discourse and Dialogue, 2023 [<a href="">PDF</a>]</li>				
 <li>Luís Borges, Jamie Callan, Bruno Martins, <i>KALE: Using a K-Sparse Projector for Lexical Expansion</i>, Proceedings of the ACM SIGIR International Conference on the Theory of Information Retrieval, 2023 [<a href="">PDF</a>]</li>
 <li>Filipe Amaral, Helena Sofia Pinto, Bruno Martins, <i>Argumentation Mining from Textual Documents Combining Deep Learning and Reasoning</i>, Proceedings of the Portuguese Conference on Artificial Intelligence, 2023 [<a href="">PDF</a>]</li>
 <li>Rita Ramos, Bruno Martins, and Desmond Elliott, <i>LMCap: Few-shot Multilingual Image Captioning by Retrieval Augmented Language Model Prompting</i>, Findings of the Association for Computational Linguistics, 2023 [<a href="https://arxiv.org/abs/2305.19821">PDF</a>]</li>
