--- a/index.html
+++ b/index.html
@@ -839,6 +839,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://aaai.org/Conferences/AAAI-24/">AAAI'24</a> |						
 						<a href="https://www.wsdm-conference.org/2024/">WSDM'24</a> |						
 						<a href="https://propor2024.citius.gal">PROPOR'24</a> |
 						<a href="https://ictai.computer.org/2023/">ICTAI'23</a> |						
