--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://ds2023.inesctec.pt/">DS'23</a> |
 						<a href="https://sigir.org/sigir2023/">SIGIR'23</a> |
 						<a href="https://isd2023.inesc-id.pt/">ISD'23</a> |
-						<a href="https://text2story23.inesctec.pt">Text2Story'23</a> |
+						<a href="https://text2story23.inesctec.pt">Text2Story'23</a> (Recognized Reviewer Award) |
 						<a href="http://www.sigapp.org/sac/sac2023/">SAC'23</a> |
 						<a href="https://dh2023.adho.org">DH'23</a> |
 						<a href="https://2023.eacl.org">EACL'23</a> |	
