--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@ involved in several research projects related to geospatial aspects in informati
 	</tr>
     	<tr>
 		<td>
-			2023/2024 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PF/2023-2024/2-semestre">Spoken Language Processing</a> (IST,MEEC,MEIC,MECD)<br/>
+			2023/2024 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/Pro33/2023-2024/2-semestre">Programming</a> (IST,LEEC,LEAer)<br/>
+			2023/2024 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PF3/2023-2024/2-semestre">Spoken Language Processing</a> (IST,MEEC,MEIC,MECD)<br/>
 			2023/2024 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AAut-4/2023-2024/1-semestre">Machine Learning</a> (IST,MEEC)<br/>
 			2022/2023 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PF/2022-2023/2-semestre">Spoken Language Processing</a> (IST,MEEC,MEIC,MECD)<br/>
 			2022/2023 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AAut-4/2022-2023/1-semestre">Machine Learning</a> (IST,MEEC)<br/>
