--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
-						
+
+						<a href="https://web.ist.utl.pt/maria.casimiro/">Maria Casimiro</a> |						
 						<a href="https://nunonmg.github.io/">Nuno Guerreiro</a> |
 						<a href="https://orcid.org/0000-0002-0362-6100">Herbert Pinto</a> |
 						<a href="https://www.linkedin.com/in/afonso-salgado-sousa/?originalSubdomain=pt">Afonso Sousa</a> |
